--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="backgrounds.css">
     <link rel="stylesheet" href="styles.css">
     <title>VCC</title>
     
 </head>
-<body>
+<body class="horizon">
     <header>
         <!-- logo -->
         <a href="" id="logo-link">
@@ -16,8 +17,14 @@
         </a>
     </header>
 
-
+    <!-- main -->
     <main>
+
+        <!-- attention-getter -->
+         <div id="attention-container" class="teamwork attention-getter getter-attention">
+            <!-- profile image -->
+                <img src="media/founder/pro7.jpeg" id="img-pro" alt="">
+         </div>
         <h1>Coming soon</h1>
     </main>
 
