chore: update header, main and footer

--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
             <h1>VC</h1>
             <h2>Counseling</h2>
         </a>
+
+        <!-- navigation -->
+            <nav id="nav">
+                <ul id="nav-list-container">
+                    <li class="nav-list-item">
+                        <a href="" class="nav-list-link">
+                            Home
+                        </a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="" class="nav-list-link">
+                            Content
+                        </a>
+                    </li>
+                    <li class="nav-list-item">
+                        <a href="" class="nav-list-link">
+                            Contact
+                        </a>
+                    </li>
+                </ul>
+            </nav>
     </header>
 
     <!-- main -->
@@ -22,10 +43,26 @@
 
         <!-- attention-getter -->
          <div id="attention-container" class="teamwork attention-getter getter-attention">
+             <!-- slogan -->
+                 <div class="slogan-actual-top">
+                    [Place Slogan Here]
+                 </div>
+
             <!-- profile image -->
                 <img src="media/founder/pro7.jpeg" id="img-pro" alt="">
+
+                <!-- slogan -->
+                 <div class="slogan-actual-bottom">
+                    [Place Slogan Here]
+                 </div>
          </div>
-        <h1>Coming soon</h1>
+
+
+         <div class="main-row"></div>
+         <div class="main-row"></div>
+         <div class="main-row"></div>
+
+
     </main>
 
 
