chore: update readme

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 <body class="horizon">
     <header>
         <!-- logo -->
-        <a href="" id="logo-link">
+        <a href="#" id="logo-link">
             <h1>VC</h1>
             <h2>Counseling</h2>
         </a>
 
         <!-- navigation -->
+            <div id="hamburger-container">
+                <span class="hamburger-span s1"></span>
+                <span class="hamburger-span s2"></span>
+                <span class="hamburger-span s3"></span>
+            </div>
             <nav id="nav">
                 <ul id="nav-list-container">
                     <li class="nav-list-item">
@@ -56,16 +61,9 @@
                     [Place Slogan Here]
                  </div>
          </div>
-
-
-         <div class="main-row"></div>
-         <div class="main-row"></div>
-         <div class="main-row"></div>
-
-
     </main>
 
-
+    <!-- footer -->
     <footer>
         <!-- logo -->
         <a href="" id="logo-link">
@@ -73,5 +71,6 @@
             <h2>Counseling</h2>
         </a>
     </footer>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
