feat: update cover phrase

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
             <!-- profile image -->
                 <img src="media/founder/pro7.jpeg" id="img-pro" alt="">
 
+                <!-- cover phrase -->
+                 <div id="cover-phrase-container">
+                    <p id="cover-phrase">
+                        "Empowering individuals with disabilities to discover their strengths, build meaningful careers, and create lasting value in the workplace."
+                    </p>
+                 </div>
+
                 <!-- slogan -->
                  <div class="slogan-actual-bottom">
                     [Place Slogan Here]
