feat: scroll feature after 100px from scrollTop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body class="horizon">
-    
+    <hr id="hr-primary">
 
     <!-- main -->
     <main>
@@ -30,23 +30,54 @@
                 <nav id="nav">
                     <ul id="nav-list-container">
                         <li class="nav-list-item">
-                            <a href="" class="nav-list-link">
+                            <a href="#" class="nav-list-link">
                                 Home
                             </a>
                         </li>
                         <li class="nav-list-item">
-                            <a href="" class="nav-list-link">
-                                Content
+                            <a href="#services" class="nav-list-link">
+                                Services
                             </a>
                         </li>
                         <li class="nav-list-item">
-                            <a href="" class="nav-list-link">
+                            <a href="#about_me" class="nav-list-link">
+                                About Me
+                            </a>
+                        </li>
+                        <li class="nav-list-item">
+                            <a href="#faq" class="nav-list-link">
+                                F.A.Q's
+                            </a>
+                        </li>
+                        <li class="nav-list-item">
+                            <a href="#contact" class="nav-list-link">
                                 Contact
                             </a>
                         </li>
                     </ul>
                 </nav>
          </header>
+
+         <!-- navigation mobile -->
+          <nav id="nav-mobile" class="hide-element">
+                    <ul id="nav-mobile-list-container">
+                            <a href="#" class="nav-mobile-list-link">
+                                Home
+                            </a>
+                            <a href="#services" class="nav-mobile-list-link">
+                                Services
+                            </a>
+                            <a href="#about_me" class="nav-mobile-list-link">
+                                About Me
+                            </a>
+                            <a href="#faq" class="nav-mobile-list-link">
+                                F.A.Q's
+                            </a>
+                            <a href="#contact" class="nav-mobile-list-link">
+                                Contact
+                            </a>
+                    </ul>
+                </nav>
         <!-- section 1 -->
          <section id="home" class="section-main section-gen background-overlay teamwork">
              <!-- slogan -->
@@ -75,18 +106,42 @@
          </section>
 
          <!-- section 2 -->
-          <section id="problem" class="section-gen background-overlay learn-more more-learn problem">
-
+          <section id="problem" class="section-gen background-overlay learn-more more-learn splash">
+            <h1>Define the Problem</h1>
           </section>
          <!-- section 3 -->
-          <section class="section-gen background-overlay splash">
+          <section id="services" class="section-gen background-overlay splash">
+            <h1>Communicate Services</h1>
 
           </section>
          <!-- section 4 -->
-          <section class="section-gen background-overlay splash">
-
+          <section id="deals" class="section-gen background-overlay splash">
+            <h1>Announce a dea or Sale</h1>
           </section>
 
+         <!-- section 5 -->
+          <section id="about_me" class="section-gen background-overlay splash">
+            <h1>About Me</h1>
+            <!-- photo of founder -->
+
+            <!-- certifications  -->
+          </section>
+
+          <!-- section 6 -->
+          <section id="faq" class="section-gen background-overlay splash">
+            <h1>FAQ</h1>
+            <!-- photo of founder -->
+
+            <!-- certifications  -->
+          </section>
+
+          <!-- section 7 -->
+          <section id="contact" class="section-gen background-overlay splash">
+            <h1>Contact Us</h1>
+            <!-- photo of founder -->
+
+            <!-- certifications  -->
+          </section>
 
 
 
