feat: update home section & mobile navigation

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
             <!-- navigation -->
                 <div id="hamburger-container">
-                    <span class="hamburger-span s1"></span>
-                    <span class="hamburger-span s2"></span>
-                    <span class="hamburger-span s3"></span>
+                    <span class="hamburger-span disabled s1"></span>
+                    <span class="hamburger-span disabled s2"></span>
+                    <span class="hamburger-span disabled s3"></span>
                 </div>
                 <nav id="nav">
                     <ul id="nav-list-container">
@@ -40,13 +40,13 @@
                             </a>
                         </li>
                         <li class="nav-list-item">
-                            <a href="#about_me" class="nav-list-link">
-                                About Me
+                            <a href="#faq" class="nav-list-link">
+                                F.A.Q's
                             </a>
                         </li>
                         <li class="nav-list-item">
-                            <a href="#faq" class="nav-list-link">
-                                F.A.Q's
+                            <a href="#about_me" class="nav-list-link">
+                                About Me
                             </a>
                         </li>
                         <li class="nav-list-item">
@@ -67,12 +67,13 @@
                             <a href="#services" class="nav-mobile-list-link">
                                 Services
                             </a>
-                            <a href="#about_me" class="nav-mobile-list-link">
-                                About Me
-                            </a>
                             <a href="#faq" class="nav-mobile-list-link">
                                 F.A.Q's
                             </a>
+                            <a href="#about_me" class="nav-mobile-list-link">
+                                About Me
+                            </a>
+                            
                             <a href="#contact" class="nav-mobile-list-link">
                                 Contact
                             </a>
@@ -80,6 +81,7 @@
                 </nav>
         <!-- section 1 -->
          <section id="home" class="section-main section-gen background-overlay teamwork">
+            <a href="#problem" id="learn-more" class="learn-more learn-more-config desktop-learn-more"> Learn more</a>
              <!-- slogan -->
                  <div class="slogan-actual-top">
                     Rewrite your story and live your best life!
@@ -106,7 +108,7 @@
          </section>
 
          <!-- section 2 -->
-          <section id="problem" class="section-gen background-overlay learn-more more-learn splash">
+          <section id="problem" class="section-gen background-overlay splash">
             <h1>Define the Problem</h1>
           </section>
          <!-- section 3 -->
@@ -116,7 +118,7 @@
           </section>
          <!-- section 4 -->
           <section id="deals" class="section-gen background-overlay splash">
-            <h1>Announce a dea or Sale</h1>
+            <h1>Announce a Deal or Sale</h1>
           </section>
 
          <!-- section 5 -->
