feat: navigation (desktop) - identify section/nav-link

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
                 <h2>Counseling</h2>
             </a>
 
-            <!-- navigation -->
-                <div id="hamburger-container">
+            <!-- hamburger menu -->
+             <div id="hamburger-container">
                     <span class="hamburger-span disabled s1"></span>
                     <span class="hamburger-span disabled s2"></span>
                     <span class="hamburger-span disabled s3"></span>
                 </div>
+            <!-- navigation -->
                 <nav id="nav">
                     <ul id="nav-list-container">
                         <li class="nav-list-item">
-                            <a href="#" class="nav-list-link">
+                            <a href="#" class="nav-list-link target-link">
                                 Home
                             </a>
                         </li>
@@ -45,7 +46,7 @@
                             </a>
                         </li>
                         <li class="nav-list-item">
-                            <a href="#about_me" class="nav-list-link">
+                            <a href="#about" class="nav-list-link">
                                 About Me
                             </a>
                         </li>
@@ -59,7 +60,7 @@
          </header>
 
          <!-- navigation mobile -->
-          <nav id="nav-mobile" class="hide-element">
+          <nav id="nav-mobile" class="hide-element relative-nav">
                     <ul id="nav-mobile-list-container">
                             <a href="#" class="nav-mobile-list-link">
                                 Home
@@ -70,7 +71,7 @@
                             <a href="#faq" class="nav-mobile-list-link">
                                 F.A.Q's
                             </a>
-                            <a href="#about_me" class="nav-mobile-list-link">
+                            <a href="#about" class="nav-mobile-list-link">
                                 About Me
                             </a>
                             
@@ -80,7 +81,7 @@
                     </ul>
                 </nav>
         <!-- section 1 -->
-         <section id="home" class="section-main section-gen background-overlay teamwork">
+         <section id="home" class="section-main section-gen-link section-gen background-overlay teamwork">
             <a href="#problem" id="learn-more" class="learn-more learn-more-config desktop-learn-more"> Learn more</a>
              <!-- slogan -->
                  <div class="slogan-actual-top">
@@ -112,7 +113,7 @@
             <h1>Define the Problem</h1>
           </section>
          <!-- section 3 -->
-          <section id="services" class="section-gen background-overlay splash">
+          <section id="services" class="section-gen section-gen-link background-overlay splash">
             <h1>Communicate Services</h1>
 
           </section>
@@ -122,23 +123,23 @@
           </section>
 
          <!-- section 5 -->
-          <section id="about_me" class="section-gen background-overlay splash">
+          <section id="faq" class="section-gen section-gen-link background-overlay splash">
+            <h1>FAQ</h1>
+            <!-- photo of founder -->
+
+            <!-- certifications  -->
+          </section>
+          
+          <!-- section 6 -->
+          <section id="about" class="section-gen section-gen-link background-overlay splash">
             <h1>About Me</h1>
             <!-- photo of founder -->
 
             <!-- certifications  -->
           </section>
 
-          <!-- section 6 -->
-          <section id="faq" class="section-gen background-overlay splash">
-            <h1>FAQ</h1>
-            <!-- photo of founder -->
-
-            <!-- certifications  -->
-          </section>
-
           <!-- section 7 -->
-          <section id="contact" class="section-gen background-overlay splash">
+          <section id="contact" class="section-gen section-gen-link background-overlay splash">
             <h1>Contact Us</h1>
             <!-- photo of founder -->
 
