feat: update new logo & subheader

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
          <header>
             <!-- logo -->
             <a href="#" id="logo-link">
-                <h1>VC</h1>
-                <h2>Counseling</h2>
+                <img src="./media/founder/logo.png" alt="">
+                <img src="./media/founder/counseling.png" alt="" id="counsel">
             </a>
 
             <!-- hamburger menu -->
@@ -152,8 +152,8 @@
         <footer>
             <!-- logo -->
             <a href="" id="logo-link">
-                <h1>VC</h1>
-                <h2>Counseling</h2>
+                <img src="./media/founder/logo.png" alt="">
+                <img src="./media/founder/counseling.png" alt="" id="counsel">
             </a>
         </footer>
     </main>
