test: remove subheader

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- logo -->
             <a href="#" id="logo-link">
                 <img src="./media/founder/logo.png" alt="">
-                <img src="./media/founder/counseling.png" alt="" id="counsel">
+                <!-- <img src="./media/founder/counseling.png" alt="" id="counsel"> -->
             </a>
 
             <!-- hamburger menu -->
@@ -153,7 +153,7 @@
             <!-- logo -->
             <a href="" id="logo-link">
                 <img src="./media/founder/logo.png" alt="">
-                <img src="./media/founder/counseling.png" alt="" id="counsel">
+                <!-- <img src="./media/founder/counseling.png" alt="" id="counsel"> -->
             </a>
         </footer>
     </main>
