update: photoshop - logo

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <!-- header -->
          <header>
             <!-- logo -->
-            <a href="#" id="logo-link">
+            <a href="#" id="logo-link" class="underline">
                 <img src="./media/founder/logo.png" alt="">
-                <!-- <img src="./media/founder/counseling.png" alt="" id="counsel"> -->
+                <em>Counseling</em>
             </a>
 
             <!-- hamburger menu -->
@@ -35,9 +35,21 @@
                                 Home
                             </a>
                         </li>
+                        <!-- problem -->
+                        <li class="nav-list-item">
+                            <a href="#problem" class="nav-list-link">
+                            .
+                            </a>
+                        </li>
                         <li class="nav-list-item">
                             <a href="#services" class="nav-list-link">
                                 Services
+                            </a>
+                        </li>
+                        <!-- problem -->
+                        <li class="nav-list-item">
+                            <a href="#deals" class="nav-list-link">
+                            .
                             </a>
                         </li>
                         <li class="nav-list-item">
@@ -109,7 +121,7 @@
          </section>
 
          <!-- section 2 -->
-          <section id="problem" class="section-gen background-overlay splash">
+          <section id="problem" class="section-gen section-gen-link background-overlay splash">
             <h1>Define the Problem</h1>
           </section>
          <!-- section 3 -->
@@ -118,7 +130,7 @@
 
           </section>
          <!-- section 4 -->
-          <section id="deals" class="section-gen background-overlay splash">
+          <section id="deals" class="section-gen section-gen-link background-overlay splash">
             <h1>Announce a Deal or Sale</h1>
           </section>
 
@@ -153,7 +165,7 @@
             <!-- logo -->
             <a href="" id="logo-link">
                 <img src="./media/founder/logo.png" alt="">
-                <!-- <img src="./media/founder/counseling.png" alt="" id="counsel"> -->
+                <em>Counseling</em>
             </a>
         </footer>
     </main>
