--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- header -->
          <header>
             <!-- logo -->
-            <a href="#" id="logo-link" class="underline">
+            <a href="#" id="logo-link">
                 <img src="./media/founder/logo.png" alt="">
                 <em>Counseling</em>
             </a>
