fix: footer target link

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
          <!-- footer -->
         <footer>
             <!-- logo -->
-            <a href="" id="logo-link">
+            <a href="#" id="logo-link">
                 <img src="./media/founder/logo.png" alt="">
                 <em>Counseling</em>
             </a>
