fix: 2025.11.10 - update logo | update cover description/phrase | update navigation item

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- logo -->
             <a href="#" id="logo-link">
                 <img src="./media/founder/logo.png" alt="">
-                <em>Counseling</em>
+                <em>Career Counseling and Coaching</em>
             </a>
 
             <!-- hamburger menu -->
@@ -54,7 +54,7 @@
                         </li>
                         <li class="nav-list-item">
                             <a href="#faq" class="nav-list-link">
-                                F.A.Q's
+                                FAQs
                             </a>
                         </li>
                         <li class="nav-list-item">
@@ -81,7 +81,7 @@
                                 Services
                             </a>
                             <a href="#faq" class="nav-mobile-list-link">
-                                F.A.Q's
+                                FAQs
                             </a>
                             <a href="#about" class="nav-mobile-list-link">
                                 About Me
@@ -106,7 +106,7 @@
                 <!-- cover phrase -->
                  <div id="cover-phrase-container">
                     <div id="cover-phrase">
-                        <p class="para-section">"Empowering individuals with disabilities to build meaningful</p>
+                        <p class="para-section">"Empowering individuals to build meaningful</p>
                         <p class="para-section italic-word">careers</p>
                         <p class="para-section">, and create lasting</p>
                         <p class="para-section italic-word">value</p>
@@ -165,7 +165,7 @@
             <!-- logo -->
             <a href="#" id="logo-link">
                 <img src="./media/founder/logo.png" alt="">
-                <em>Counseling</em>
+                <em>Career Counseling and Coaching</em>
             </a>
         </footer>
     </main>
