update: mobile navigation indication

--- a/index.html
+++ b/index.html
@@ -74,11 +74,17 @@
          <!-- navigation mobile -->
           <nav id="nav-mobile" class="hide-element relative-nav">
                     <ul id="nav-mobile-list-container">
-                            <a href="#" class="nav-mobile-list-link">
+                            <a href="#" class="target-link nav-mobile-list-link">
                                 Home
+                            </a>
+                            <a href="#problem" class="nav-mobile-list-link">
+                            .
                             </a>
                             <a href="#services" class="nav-mobile-list-link">
                                 Services
+                            </a>
+                            <a href="#deals" class="nav-mobile-list-link">
+                            .
                             </a>
                             <a href="#faq" class="nav-mobile-list-link">
                                 FAQs
