test: problem container - double column view

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="backgrounds.css">
+    <link rel="stylesheet" href="problem.css">
     <link rel="stylesheet" href="styles.css">
     <title>VCC</title>
     
@@ -127,8 +128,19 @@
          </section>
 
          <!-- section 2 -->
-          <section id="problem" class="section-gen section-gen-link background-overlay splash">
-            <h1>Define the Problem</h1>
+          <section id="problem" class="section-gen section-gen-link background-overlay frustrated">
+            <!-- <h1>Define the Problem</h1> -->
+             <div class="problem-col">
+                <p class="problem-para">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa consequatur commodi accusantium adipisci alias ipsam ea, ab veritatis nostrum eaque debitis nam pariatur omnis ducimus ullam ad. Consequatur, magni rerum.
+                </p>
+             </div>
+             <hr class="problem-hr">
+             <div class="problem-col">
+                <p class="problem-para">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa consequatur commodi accusantium adipisci alias ipsam ea, ab veritatis nostrum eaque debitis nam pariatur omnis ducimus ullam ad. Consequatur, magni rerum.
+                </p>
+             </div>
           </section>
          <!-- section 3 -->
           <section id="services" class="section-gen section-gen-link background-overlay splash">
