--- a/index.html
+++ b/index.html
@@ -129,31 +129,19 @@
 
          <!-- section 2 -->
           <section id="problem" class="section-gen section-gen-link background-overlay frustrated">
-            <!-- <h1>Define the Problem</h1> -->
-             <div class="problem-col">
-                <p class="problem-para">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa consequatur commodi accusantium adipisci alias ipsam ea, ab veritatis nostrum eaque debitis nam pariatur omnis ducimus ullam ad. Consequatur, magni rerum.
-                </p>
-             </div>
-             <hr class="problem-hr">
-             <div class="problem-col">
-                <p class="problem-para">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa consequatur commodi accusantium adipisci alias ipsam ea, ab veritatis nostrum eaque debitis nam pariatur omnis ducimus ullam ad. Consequatur, magni rerum.
-                </p>
-             </div>
           </section>
          <!-- section 3 -->
-          <section id="services" class="section-gen section-gen-link background-overlay splash">
+          <section id="services" class="section-gen section-gen-link background-overlay bluesky">
             <h1>Communicate Services</h1>
 
           </section>
          <!-- section 4 -->
-          <section id="deals" class="section-gen section-gen-link background-overlay splash">
+          <section id="deals" class="section-gen section-gen-link background-overlay stones">
             <h1>Announce a Deal or Sale</h1>
           </section>
 
          <!-- section 5 -->
-          <section id="faq" class="section-gen section-gen-link background-overlay splash">
+          <section id="faq" class="section-gen section-gen-link background-overlay rocks rocks-mobile">
             <h1>FAQ</h1>
             <!-- photo of founder -->
 
@@ -161,7 +149,7 @@
           </section>
           
           <!-- section 6 -->
-          <section id="about" class="section-gen section-gen-link background-overlay splash">
+          <section id="about" class="section-gen section-gen-link background-overlay stones-rev">
             <h1>About Me</h1>
             <!-- photo of founder -->
 
@@ -169,7 +157,7 @@
           </section>
 
           <!-- section 7 -->
-          <section id="contact" class="section-gen section-gen-link background-overlay splash">
+          <section id="contact" class="section-gen section-gen-link background-overlay sundown">
             <h1>Contact Us</h1>
             <!-- photo of founder -->
 
