fork: edit learn-more and add in certification top

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </nav>
         <!-- section 1 -->
          <section id="home" class="section-main section-gen-link section-gen background-overlay teamwork">
-            <a href="#problem" id="learn-more" class="learn-more learn-more-config desktop-learn-more"> Learn more</a>
+            <a href="#problem" id="learn-more" class="learn-more learn-more-config desktop-learn-more"> Learn more <img src="./media/icons/down.png" alt=""> </a>
              <!-- slogan -->
                  <div class="slogan-actual-top">
                     Rewrite your story and live your best life!
@@ -121,6 +121,9 @@
                     </div>
                  </div>
 
+                 <div id="certification" class="announce">
+                    <p id="cert">Certified Rehabilitation Counselor (CRC) - Provide counseling and mental health support</p>
+                 </div>
                 <!-- slogan -->
                  <!-- <div class="slogan-actual-bottom">
                     Rewrite your story and live your best life!
@@ -129,6 +132,7 @@
 
          <!-- section 2 -->
           <section id="problem" class="section-gen section-gen-link background-overlay frustrated">
+
           </section>
          <!-- section 3 -->
           <section id="services" class="section-gen section-gen-link background-overlay bluesky">
