chore: allow client to edit

--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
             <div class="section-col a">
                 <div class="description">
                     <p>
+                        <!------------------------------------------- edit text below ------------------------------------------->
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium non quaerat praesentium voluptate debitis vitae facere quod rem suscipit tempore numquam iure, earum animi officiis nobis labore amet iusto incidunt?
+                        <!------------------------------------------- edit text above ------------------------------------------->
                     <!-- subheader -->
                     <div class="section-subheader">
                         <h2 class="alone">You are not <p class="italic-word">alone</p></h2>
@@ -157,7 +159,9 @@
                         <h2 class="take-action">It's never too <p class="italic-word">late</p></h2>
                     </div>
                     <p class="text-align-center">
+                        <!------------------------------------------- edit text above ------------------------------------------->
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet rerum laboriosam ipsa dolores earum, ipsam eligendi obcaecati soluta illo aliquam voluptatibus aut quasi maiores voluptas ut provident odit accusamus adipisci.
+                        <!------------------------------------------- edit text above ------------------------------------------->
                     </p>
                     
                 </div>
