--- a/index.html
+++ b/index.html
@@ -175,25 +175,10 @@
           <section id="services" class="section-gen section-gen-link background-overlay bluesky">
             <!-- subheader -->
             <div class="section-subheader">
-                <h2 class="servicing">How can we <p class="italic-word">assist</p> you?</h2>
+                <h2 class="servicing glass-card">How can we <p class="italic-word">assist</p> you ?</h2>
             </div>
 
-            <div id="column-container">
-                <!-- <div class="section-col">
-                    <div class="cloud-container">
-                        <div class="cloud cloud1"></div>
-                    </div>
-                </div> -->
-                <!-- <div class="section-col">
-                    <div class="cloud-container">
-                        <div class="cloud cloud2"></div>
-                    </div>
-                </div> -->
-                <!-- <div class="section-col">
-                    <div class="cloud-container">
-                        <div class="cloud cloud3"></div>
-                    </div>
-                </div> -->
+            <div id="column-container" class="glass-card">
                 <div class="section-col">
                     <div class="cloud-container no-scrollbar">
                         <div class="cloud cloud4 cloud-left">
@@ -222,9 +207,10 @@
                         </div>
                     </div>
 
-                    <div class="glass-card"></div>
+                    <!-- hands background -->
+                    <div class="hands holding-hands">
+                    </div>
                 </div> 
-            
             </div>
 
           </section>
