fork: services cloud-container

--- a/index.html
+++ b/index.html
@@ -209,7 +209,12 @@
 
                     <!-- hands background -->
                     <div class="hands holding-hands">
+                        <div>
+                            <a class="cta-mail" href="mailto:lelandbassie@gmail.com"><img height="125" src="./media/icons/mail.png" alt="mail icon"></a>
+                            <p id="cta-label">Contact us</p>
+                        </div>
                     </div>
+
                 </div> 
             </div>
 
