chore: allow editing to faq

--- a/index.html
+++ b/index.html
@@ -235,41 +235,73 @@
                 
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>Ask question here</h3>
+                        <h3>
+                        <!------------------------------------------- edit text below ------------------------------------------->
+                        Ask question here
+                        <!------------------------------------------- edit text above ------------------------------------------->
+                        </h3>
                         <span class="toggle-icon">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>Answer question here</p>
+                        <p>
+                        <!------------------------------------------- edit text below ------------------------------------------->
+                        Answer question here
+                        <!------------------------------------------- edit text above ------------------------------------------->
+                        </p>
                     </div>
                 </div>
 
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>Ask question here</h3>
+                        <h3>
+                        <!------------------------------------------- edit text below ------------------------------------------->
+                        Ask Question here
+                        <!------------------------------------------- edit text above ------------------------------------------->
+                        </h3>
                         <span class="toggle-icon">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>Answer question here</p>
+                        <p>
+                            <!------------------------------------------- edit text below ------------------------------------------->
+                        Answer question here
+                        <!------------------------------------------- edit text above ------------------------------------------->
+                        </p>
                     </div>
                 </div>
                 
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>Ask question here</h3>
+                        <h3>
+                            <!------------------------------------------- edit text below ------------------------------------------->
+                        Ask Question here
+                        <!------------------------------------------- edit text above ------------------------------------------->
+                        </h3>
                         <span class="toggle-icon">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>Answer question here</p>
+                        <p>
+                            <!------------------------------------------- edit text below ------------------------------------------->
+                        Answer question here
+                        <!------------------------------------------- edit text above ------------------------------------------->
+                        </p>
                     </div>
                 </div>
 
                 <div class="faq-item">
                     <div class="faq-question">
-                        <h3>Ask question here</h3>
+                        <h3>
+                        <!------------------------------------------- edit text below ------------------------------------------->
+                        Ask Question here
+                        <!------------------------------------------- edit text above ------------------------------------------->
+                        </h3>
                         <span class="toggle-icon">+</span>
                     </div>
                     <div class="faq-answer">
-                        <p>Answer question here</p>
+                        <p>
+                            <!------------------------------------------- edit text below ------------------------------------------->
+                        Answer question here
+                        <!------------------------------------------- edit text above ------------------------------------------->
+                        </p>
                     </div>
                 </div>
 
