--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
                 <div class="description">
                     <p>
                         <!------------------------------------------- edit text below ------------------------------------------->
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium non quaerat praesentium voluptate debitis vitae facere quod rem suscipit tempore numquam iure, earum animi officiis nobis labore amet iusto incidunt?
+                        Welcome to Value Creation (VC) Career Counseling and Coaching! Thank you for stopping by and taking a chance on allowing us to help you. 
+
+                        Are you looking to change careers or move up your career ladder? Well, you're in the right place!
                         <!------------------------------------------- edit text above ------------------------------------------->
                     <!-- subheader -->
                     <div class="section-subheader">
