--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
                 <div class="description">
                     <p>
                         <!------------------------------------------- edit text below ------------------------------------------->
-                        Welcome to Value Creation (VC) Career Counseling and Coaching! Thank you for stopping by and taking a chance on allowing us to help you. 
-
-                        Are you looking to change careers or move up your career ladder? Well, you're in the right place!
+                         Are you looking to change careers or move up the career ladder? Or are you stuck in a dead-end job with no clue where to go next? Or maybe you are not sure about what major to enroll in at college or university.
                         <!------------------------------------------- edit text above ------------------------------------------->
                     <!-- subheader -->
                     <div class="section-subheader">
@@ -163,7 +161,7 @@
                     </div>
                     <p class="text-align-center">
                         <!------------------------------------------- edit text above ------------------------------------------->
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet rerum laboriosam ipsa dolores earum, ipsam eligendi obcaecati soluta illo aliquam voluptatibus aut quasi maiores voluptas ut provident odit accusamus adipisci.
+                        You're in the right place with the right person. I have been in your shoes and sought the same services, and now my experience is at your disposal. I have over 17 years of career counseling experience and a large network of connections. 
                         <!------------------------------------------- edit text above ------------------------------------------->
                     </p>
                     
