--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="faq-question">
                         <h3>
                         <!------------------------------------------- edit text below ------------------------------------------->
-                        Ask question here
+                        What can a career counselor do for me?
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </h3>
                         <span class="toggle-icon">+</span>
@@ -245,7 +245,7 @@
                     <div class="faq-answer">
                         <p>
                         <!------------------------------------------- edit text below ------------------------------------------->
-                        Answer question here
+                        I’ll help you clarify your goals, explore career options, and develop a practical action plan to achieve your goals. I’m here to help you navigate transitions while you build confidence and create value in your life and in others’.
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </p>
                     </div>
@@ -255,7 +255,7 @@
                     <div class="faq-question">
                         <h3>
                         <!------------------------------------------- edit text below ------------------------------------------->
-                        Ask Question here
+                        Can I afford career counseling?
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </h3>
                         <span class="toggle-icon">+</span>
@@ -263,7 +263,7 @@
                     <div class="faq-answer">
                         <p>
                             <!------------------------------------------- edit text below ------------------------------------------->
-                        Answer question here
+                        Yes! A 50-minute session costs $150. And the number of sessions depends on each person's needs. It can be a few or many. But don't worry. I have a sliding fee schedule that we can discuss further.
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </p>
                     </div>
