--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <div class="faq-answer">
                         <p>
                             <!------------------------------------------- edit text below ------------------------------------------->
-                        Yes! A 50-minute session costs $150. And the number of sessions depends on each person's needs. It can be a few or many. But don't worry. I have a sliding fee schedule that we can discuss further.
+                        Yes! And the number of sessions depends on each person's needs. It can be as few as 2 or many as 20. I have a sliding fee schedule that we can discuss further. 
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </p>
                     </div>
